--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "https": "^1.0.0",
+    "minhash": "^0.0.9",
     "mongoose": "^7.1.0",
     "node-fetch": "^2.6.9",
     "passport": "^0.6.0",
