--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "flexsearch": "^0.7.31",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "minhash": "^0.0.9",
