--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "flexsearch": "^0.7.31",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "minhash": "^0.0.9",
-    "mongoose": "^7.1.0",
+    "mongoose": "^7.2.2",
     "node-fetch": "^2.6.9",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
